# AMS302

./: #a.out#  #err_f_nb_parts.sh#  .#err_f_nb_parts.sh  .gitignore  TP1  TP1.cpp  TP1.cpp~  TP1_cuda.cu  TP1_cuda.cu~  TP1_diff  TP1_diff.cpp  TP1_sigmavar.cpp  TP1_woodcock.cpp  TP1cuda  TP1woodcock.cpp  TP1woodcock.cpp~  a.out  convergence.sh  coucou  err_N_1  log  output_TP1_diff  output_TP1_sigmavar  plot.hpp  plot.hpp~  plot.h~  tmp  utils.hpp  utils.hpp~
Deterministe/: CMakeLists.txt  fe1D_solver.hpp  legendre_polynomial.hpp  noS_9.cpp  solver_deter.cpp  test.cpp  test_legendre.cpp  utils.hpp  vector_v2.hpp
Deterministe/Rapport/: #rapport_deterministe.tex#  .#rapport_deterministe.tex  Graphics  MCRapport  loop_nb_pts_mu_cste.tex  nb_segs_diff_L2_delta.eps  output_1_05_5_2.eps  output_1_1_5_1.eps  output_1_neg1_5_1.tex  output_two_steps_1_05_1_2.eps  output_two_steps_1_05_1_2.tex  output_two_steps_1_1_1_2.eps  presentation.nav  presentation.snm  presentation.tex  presentation.toc  rapport_deterministe.tex  rapport_deterministe.tex.backup
Deterministe/Rapport/Graphics/: circularity.eps  circularity.tex  loop_nb_pts_mu_cste.eps  loop_nb_pts_mu_cste.tex  loop_nb_pts_mu_delta.tex  nb_segs_diff_L2_cste.tex  nb_segs_diff_L2_delta.eps  output_1_05_5_2.eps  output_1_1_5_1.eps  output_1_1_5_1.tex  output_1_neg1_5_1.tex  (+2 more)
MonteCarlo/: CMakeLists.txt  TP1  TP1.cpp  TP1_diff.cpp  TP1_sigmavar  TP1_sigmavar.cpp  err_N  err_f_nb_parts.sh  output_TP1_diff  utils.hpp  vector_v2.hpp
MonteCarlo/Rapport/: _region_.tex  phi.tex  rapport_monte_carlo.tex
Rapport/: phi.eps  (+1 more)
(+4 files in other folders)
